// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React component test: <HoneyBadgersTable> Renders correctly for given application state: Initial props/state 1`] = `
<Grid$$1
  columns={
    Array [
      Object {
        "name": "ipAddress",
        "title": "IP Address",
      },
      Object {
        "name": "count",
        "title": "Times Seen Last 24 Hours",
      },
      Object {
        "name": "asn",
        "title": "Autonomous System #",
      },
    ]
  }
  rows={Array []}
>
  <PagingState
    defaultCurrentPage={0}
    defaultPageSize={10}
    pageSize={5}
  />
  <IntegratedPaging />
  <Table$$1
    messages={Object {}}
  />
  <TableHeaderRow$$1
    messages={Object {}}
  />
  <PagingPanel$$1
    messages={Object {}}
  />
</Grid$$1>
`;

exports[`React component test: <HoneyBadgersTable> Renders correctly for given application state: Rows rendered (honey badgers data w/ autonomous systems data) 1`] = `
<Grid$$1
  columns={
    Array [
      Object {
        "name": "ipAddress",
        "title": "IP Address",
      },
      Object {
        "name": "count",
        "title": "Times Seen Last 24 Hours",
      },
      Object {
        "name": "asn",
        "title": "Autonomous System #",
      },
    ]
  }
  rows={
    Array [
      Object {
        "asn": 16276,
        "count": "987",
        "ipAddress": "1.1.1.1",
      },
    ]
  }
>
  <PagingState
    defaultCurrentPage={0}
    defaultPageSize={10}
    pageSize={5}
  />
  <IntegratedPaging />
  <Table$$1
    messages={Object {}}
  />
  <TableHeaderRow$$1
    messages={Object {}}
  />
  <PagingPanel$$1
    messages={Object {}}
  />
</Grid$$1>
`;

exports[`React component test: <HoneyBadgersTable> Renders correctly for given application state: Rows rendered (honey badgers data w/o additional data) 1`] = `
<Grid$$1
  columns={
    Array [
      Object {
        "name": "ipAddress",
        "title": "IP Address",
      },
      Object {
        "name": "count",
        "title": "Times Seen Last 24 Hours",
      },
      Object {
        "name": "asn",
        "title": "Autonomous System #",
      },
    ]
  }
  rows={
    Array [
      Object {
        "asn": "Loading",
        "count": "987",
        "ipAddress": "1.1.1.1",
      },
    ]
  }
>
  <PagingState
    defaultCurrentPage={0}
    defaultPageSize={10}
    pageSize={5}
  />
  <IntegratedPaging />
  <Table$$1
    messages={Object {}}
  />
  <TableHeaderRow$$1
    messages={Object {}}
  />
  <PagingPanel$$1
    messages={Object {}}
  />
</Grid$$1>
`;
